fixed content overlap

--- a/style.css
+++ b/style.css
@@ -20,31 +20,35 @@ body {
 
  			float: right;
  			
- 			overflow: hidden; 			
+ 			overflow: hidden; 
  			/*box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;*/
 
 }
 #grid1{
-  background-color: whitesmoke;
+  background-color: white;
 	border: 5px;
-	/*border-style: dotted;*/
+	border-style: ridge;
 
 	width: 280px;
-	margin-left: 2px;
-	border-radius: 20px;
+	/*margin-left: 2px;*/
+	border-radius: 20px;	
 
 	height:  400px;
 
 	visibility: hidden;
+
+	margin-top: 20px;
+	margin-left: 10px;
+	border-color: #018749;
 }
 
 #grid2 {
 
-	  /*background-color: antiquewhite;*/
+	  background-color:#f2f3f4;
 	  width: 100px;
 	  margin-left: 50px;
 
-	  height: 380px;
+	  height: 380px;	 
 
 	  /*margin-top: -28px;*/
 
@@ -52,26 +56,16 @@ body {
   	grid-row-gap: 15px;*/
 
   	/*float: right;*/
-		/*font-family: Andale Mono, monospace, Courier New, monospace;*/  	  
+
 } 
-
-/*
-#firstView, body {		
-	  width: 50px;
-	  margin-left: 50px;
-
-	  height: 380px;
-	  margin-top: -5px;
-	  float: right;
-
-
-}*/
 
 
 svg, img {
       float: right;
       height: 50px;
       width: auto;
+
+
       /*margin-bottom: 20px;*/
    }
 
@@ -85,6 +79,12 @@ img {
 	border-bottom-right-radius: 15px; 
 }
 
+h1, h2 {
+	background-color:#a8e4a0; /*rgb(119,221,119);*/
+	border-radius: 20px;
+	width: 200px;
+}
+
 
 ul {
 	 list-style-type: none;
@@ -96,7 +96,6 @@ a {
   
   color: #018749;
   text-decoration: none;
-  text-transform: uppercase;
 }
 
 a:hover {
